update discourse url

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ title: "BaseSpace Help"
       </div>
     </a>
 
-    <a href="http://www.discourse.org/" class="link_grey">
+    <a href="https://discuss.cloud-hoth.illumina.com/" class="link_grey">
 
       <div id="sidebarmodule-forums">
 
