--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ is_homepage: true
 <div class="container">
  <div class="row">
   <div class="col-sm-5">
-      <a href="articleLandingPagecopy.html" class="link_grey">
+      <a href="{{ site.baseurl }}/articles/" class="link_grey">
 
       <div id="sidebarmodule-articles">
 
