--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: home
 title: "BaseSpace Help"
 is_homepage: true
 ---
@@ -73,7 +73,7 @@ is_homepage: true
             <ol class="popular-article-ol">
                 <a><li class="popular-article-link">FastQC and Velvet de novo Assembly</li></a>
                 <a><li class="popular-article-link">FASTQ upload for BaseSpace</li></a>
-                <a><li class="popular-article-link">DeepChek®-HIV – App for genotyping by NGS and inferred drug resistance testing</li></a>
+                <a><li class="popular-article-link">DeepChek®-HIV – App for genotyping by NGS</li></a>
                 <a><li class="popular-article-link">VariantStudio on BaseSpace</li></a>
                 <a><li class="popular-article-link">TruSeq Long-Read Assembly and TruSeq Phasing Analysis</li></a>
 
@@ -109,20 +109,9 @@ is_homepage: true
 
     <div class="lower_banner">
     <div class="container">
-
-                    <div class="row">
-
-                        <div class="col-sm-6 col-sm-offset-1">
-
-                            <h3 class="carousel-heading">What's new with BaseSpace</h3>
-                            <p>
-                            BaseSpace is evolving rapidly and we are churning out new updates every week. Browse through to see our latest updates and release our view the entire list <a href="http://blog.basespace.illumina.com/">here</a>
-
-                            </p>
-                        </div>
-                    </div>
                     <div class="row">
                         <div class="col-sm-10 col-sm-offset-1">
+                            <h3 class="carousel-heading">What's new with BaseSpace</h3>
                             <hr class="carousel-line">
                         </div>
                     </div>
@@ -284,7 +273,7 @@ is_homepage: true
 
              <div class="col-sm-6">
 
-                 <a href="gettingStarted.html" class="button-primary">Visit the Video Center</a>
+                 <a href="gettingStarted.html" class="button-secondary">Visit the Video Center</a>
 
              </div>
 
