--- a/index.html
+++ b/index.html
@@ -109,9 +109,15 @@ is_homepage: true
 
     <div class="lower_banner">
     <div class="container">
+                          <div class="row">
+
+                        <div class="col-sm-6">
+
+                            <h3 class="carousel-heading">What's new with BaseSpace</h3>
+                        </div>
+                    </div>
                     <div class="row">
-                        <div class="col-sm-10 col-sm-offset-1">
-                          <h3 class="carousel-heading">What's new with BaseSpace</h3>
+                        <div class="col-sm-10">
                             <hr class="carousel-line">
                         </div>
                     </div>
@@ -130,7 +136,7 @@ is_homepage: true
 
                                         <div class="active item">
                                             <div class="row">
-                                                <div class="col-sm-4 col-sm-offset-1">
+                                                <div class="col-sm-4">
                                                  <img src="images/slide1.jpg" class="carousel-img-one">
                                                 </div>
                                                 <div class="col-sm-5">
@@ -149,7 +155,7 @@ is_homepage: true
 
                                         <div class="item">
                                             <div class="row">
-                                                <div class="col-sm-4 col-sm-offset-1">
+                                                <div class="col-sm-4">
                                                  <img src="images/slide2.jpg" class="carousel-img-two">
                                                 </div>
                                                 <div class="col-sm-5">
