--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ is_homepage: true
                                         <div class="active item">
                                             <div class="row">
                                                 <div class="col-sm-4">
-                                                 <img src="images/slide1.jpg" class="carousel-img-one">
+                                                 <img src="images/slide1.jpg" class="carousel-img-one col-sm-offset-1">
                                                 </div>
                                                 <div class="col-sm-5">
                                                 <div class="carousel-body">
@@ -156,7 +156,7 @@ is_homepage: true
                                         <div class="item">
                                             <div class="row">
                                                 <div class="col-sm-4">
-                                                 <img src="images/slide2.jpg" class="carousel-img-two">
+                                                 <img src="images/slide2.jpg" class="carousel-img-two col-sm-offset-1">
                                                 </div>
                                                 <div class="col-sm-5">
                                                 <div class="carousel-body">
@@ -174,7 +174,7 @@ is_homepage: true
                                         <div class="item">
                                            <div class="row">
                                                 <div class="col-sm-4 col-sm-offset-1">
-                                                 <img src="images/slide3.jpg" class="carousel-img-three">
+                                                 <img src="images/slide3.jpg" class="carousel-img-three col-sm-offset-1">
                                                 </div>
                                                 <div class="col-sm-5">
                                                 <div class="carousel-body">
