start icon added

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@ is_homepage: true
                 <div id="sidebarmodule-newb">
      
                     <div class="left-part">
-                        <span class="icon-arrow-right newb_icon"></span>
-                         <span class="icon-arrow-right newb_icon"></span>
+                        <span class="icon-switch newb_icon"></span>
                     </div>
                     
                     <div class="middle-part">
