--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: "BaseSpace Help"
 is_homepage: true
 ---
-
+<!-- BaseSpace Space Bass -->
 <div class="home-main-section">
  
     <div class="row">
