descriptive article and others fix
- added horizontal line divider in descriptive articles
- added widget link for feedback
- added footer links

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@ is_homepage: true
                 <div class="col-xs-offset-1">
                     <div class="col-xs-3">
                     
-                        <a target="_newtab" href="https://support.basespace.illumina.com/clients/widgets/classic_widget?mode=feedback">
+                        <a target="_newtab" href="https://support.basespace.illumina.com/clients/widgets/classic_widget">
                         <section class="block">
                                 <section>
                                       <div class="left_cell">
