--- a/index.html
+++ b/index.html
@@ -90,10 +90,10 @@ is_homepage: true
                          <li><a href="/articles/tutorials/combine-samples/" class="popular-article-link">How to combine samples</a></li>
                          <li><a href="/articles/tutorials/switch-existing-account-to-new-credentials/" class="popular-article-link">How to switch existing account to a new username/email</a></li>
                          <li><a href="/articles/tutorials/purchase-icredits/" class="popular-article-link">How to purchase iCredits</a></li>
-                         <li><a href="/articles/tutorials/download-data-from-run/" class="accordion-link">How to download Data from a Run</a></li>
+                         <li><a href="/articles/tutorials/download-data-from-run/" class="popular-article-link">How to download Data from a Run</a></li>
                          <li><a href="/articles/tutorials/cancel-transfer-ownership/" class="popular-article-link">How to cancel the transfer of ownership?</a></li>
-                         <li><a href="/articles/descriptive/biological-samples/" class="accordion-link">Biological Samples tab</a></li>
-                         <li><a href="/articles/tutorials/plan-runs/" class="accordion-link">How to plan runs</a></li>
+                         <li><a href="/articles/descriptive/biological-samples/" class="popular-article-link">Biological Samples tab</a></li>
+                         <li><a href="/articles/tutorials/plan-runs/" class="popular-article-link">How to plan runs</a></li>
                 </ol>
 
 
