tweak responsive styles

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@ is_homepage: true
 
             <a href="{{ site.baseurl }}/articles/new-to-basespace" class="well bsh-well" id="bsh-category-newb">
                 <div class="media">
+                    <div class="media-right media-middle pull-right ">
+                        <span class="icon-arrow-right caret-right"></span>
+                    </div>
                   <div class="media-left media-middle">
                     <span class="icon-switch newb-icon"></span>
                   </div>
@@ -28,14 +31,14 @@ is_homepage: true
                     <h3 class="media-heading">New to BaseSpace?</h3>
                     <p>Get started and Explore BaseSpace</p>
                   </div>
-                  <div class="media-right media-middle">
-                    <span class="icon-arrow-right caret-right pull-right"></span>
-                  </div>
                 </div>
             </a>
 
             <a href="{{ site.baseurl }}/articles/" class="well bsh-well" id="bsh-category-articles">
                 <div class="media">
+                    <div class="media-right media-middle pull-right ">
+                        <span class="icon-arrow-right caret-right"></span>
+                    </div>
                   <div class="media-left media-middle">
                     <span class="icon-article article-icon"></span>
                   </div>
@@ -43,23 +46,20 @@ is_homepage: true
                     <h3 class="media-heading">Articles</h3>
                     <p>Everything in one place; All our articles</p>
                   </div>
-                  <div class="media-right media-middle">
-                    <span class="icon-arrow-right caret-right pull-right"></span>
-                  </div>
                 </div>
             </a>
 
             <a href="https://developer.basespace.illumina.com/" target="_newtab" class="well bsh-well" id="bsh-category-dev">
                 <div class="media">
+                    <div class="media-right media-middle pull-right ">
+                        <span class="icon-arrow-right caret-right"></span>
+                    </div>
                   <div class="media-left media-middle">
                     <span class="icon-wrench dev-icon"></span>
                   </div>
                   <div class="media-body media-middle bsh-media-body">
                     <h3 class="media-heading">BaseSpace Developers</h3>
                     <p>Start building the next generation of sequencing apps</p>
-                  </div>
-                  <div class="media-right media-middle">
-                    <span class="icon-arrow-right caret-right pull-right"></span>
                   </div>
                 </div>
             </a>
