Fix video panel styles

--- a/index.html
+++ b/index.html
@@ -93,15 +93,16 @@ is_homepage: true
 
         <div class="row">
             <div class="col-sm-3">
-                <a href="#" class="lghtbox" data-toggle="modal" data-target="#videoModal" data-theVideo="//www.youtube.com/embed/37DXwRZTevE"><img src="images/basespace_video.png" class="img-responsive">
+                <a href="#" class="lghtbox well bsh-well-gray" data-toggle="modal" data-target="#videoModal" data-theVideo="//www.youtube.com/embed/37DXwRZTevE">
+                  <img src="images/basespace_video.png" class="img-responsive">
                     <br>
                     <p>Push-Button Data Sharing in BaseSpace</p>
-                    </a>
+                </a>
                                 
             </div>
 
             <div class="col-sm-3">
-                <a href="#" class="lghtbox" data-toggle="modal" data-target="#videoModal" data-theVideo="//www.youtube.com/embed/OraUx3yWSKI"><img src="images/video1.png" class="img-responsive">
+                <a href="#" class="lghtbox well bsh-well-gray" data-toggle="modal" data-target="#videoModal" data-theVideo="//www.youtube.com/embed/OraUx3yWSKI"><img src="images/video1.png" class="img-responsive">
                     <br>
                     <p>Getting Started with Push-Button Bioinformatics in BaseSpace</p>
                     </a>
@@ -109,7 +110,7 @@ is_homepage: true
             </div>  
 
             <div class="col-sm-3">
-                <a href="#" class="lghtbox" data-toggle="modal" data-target="#videoModal" data-theVideo="//www.youtube.com/embed/kX43Shx6H00"><img src="images/video2.png" class="img-responsive">
+                <a href="#" class="lghtbox well bsh-well-gray" data-toggle="modal" data-target="#videoModal" data-theVideo="//www.youtube.com/embed/kX43Shx6H00"><img src="images/video2.png" class="img-responsive">
                     <br>
                     <p>Push-Button Data Visualization in BaseSpace</p>
                     </a>
@@ -117,7 +118,7 @@ is_homepage: true
             </div>  
             
             <div class="col-sm-3">
-                <a href="#" class="lghtbox" data-toggle="modal" data-target="#videoModal" data-theVideo="//www.youtube.com/embed/AzpyafxoWGw"><img src="images/video3.png" class="img-responsive">
+                <a href="#" class="lghtbox well bsh-well-gray" data-toggle="modal" data-target="#videoModal" data-theVideo="//www.youtube.com/embed/AzpyafxoWGw"><img src="images/video3.png" class="img-responsive">
                     <br>
                   <p>Push-Button De Novo Assembly in BaseSpace</p>
                 </a>
