--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ is_homepage: true
         <div class="row">
             <div class="col-sm-3">
                 <a href="#" class="lghtbox thumbnail bsh-thumbnail" data-toggle="modal" data-target="#videoModal" data-theVideo="//www.youtube.com/embed/37DXwRZTevE">
-                  <img src="images/basespace_video.png" class="img-responsive">
+                  <img src="images/video3.png" class="img-responsive">
                     <div class="caption">
                       <p>Push-Button Data Sharing in BaseSpace</p>
                     </div>
