Added release notes section in additional resources

--- a/index.html
+++ b/index.html
@@ -149,44 +149,42 @@ is_homepage: true
         <h2 class="home-title">Additional Resources</h2>
         <div class="row">
 
-            <div class="col-sm-4">
-              <a target="_blank" href="https://support.basespace.illumina.com/" class="bsh-additional-section">
-                <div class="media">
-                  <div class="media-left media-top">
-                    <span class="icon-envelope bsh-additional-icon"></span>
-                  </div>
-                  <div class="media-body media-top">
-                    <h3 class="media-heading">Provide Feedback</h3>
-                    <p>Have ideas or suggestions for BaseSpace?</p>
-                  </div>
+            <div class="col-sm-3">
+              <a target="_blank" href="https://support.basespace.illumina.com/">
+                <div class="bsh-additional-section">
+                  <p><span class="glyphicon glyphicon-bullhorn bsh-additional-icon"></span></p>
+                  <h4>Provide Feedback</h4>
+                  <p>Have ideas or suggestions for BaseSpace?</p>
                 </div>
               </a>
             </div>
             
-            <div class="col-sm-4">
-              <a target="_blank" href="https://support.basespace.illumina.com/" class="bsh-additional-section">
-                <div class="media">
-                  <div class="media-left media-top">
-                    <span class="icon-phone bsh-additional-icon"></span>
-                  </div>
-                  <div class="media-body media-top">
-                    <h3 class="media-heading">Contact Us</h3>
-                    <p>Have questions directly for us? Send us an email</p>
-                  </div>
+            <div class="col-sm-3">
+              <a target="_blank" href="https://support.basespace.illumina.com/">
+                <div class="bsh-additional-section">
+                  <p><span class="icon-envelope bsh-additional-icon"></span></p>
+                  <h4>Contact Us</h4>
+                  <p>Have questions directly for us? Send us an email</p>
                 </div>
               </a>
             </div>
 
-            <div class="col-sm-4">
-              <a target="_blank" href="http://support.illumina.com/content/dam/illumina-support/documents/documentation/software_documentation/basespace/basespace-user-guide-15044182-e.pdf" class="bsh-additional-section">
-                <div class="media">
-                  <div class="media-left media-top">
-                    <span class="icon-print bsh-additional-icon"></span>
-                  </div>
-                  <div class="media-body media-top">
-                    <h3 class="media-heading">Print User Guide</h3>
-                    <p>Print a PDF version of our User Guide that include articls, FAQs and policies</p>
-                  </div>
+            <div class="col-sm-3">
+              <a target="_blank" href="http://support.illumina.com/content/dam/illumina-support/documents/documentation/software_documentation/basespace/basespace-user-guide-15044182-e.pdf">
+                <div class="bsh-additional-section">
+                  <p><span class="icon-print bsh-additional-icon"></span></p>
+                  <h4>Print User Guide</h4>
+                  <p>This PDF version include articls, FAQs and policies</p>
+                </div>
+              </a>
+            </div>
+
+            <div class="col-sm-3">
+              <a target="_blank" href="http://support.illumina.com/content/dam/illumina-support/documents/documentation/software_documentation/basespace/basespace-user-guide-15044182-e.pdf">
+                <div class="bsh-additional-section">
+                  <p><span class="icon-file bsh-additional-icon"></span></p>
+                  <h4>Release Notes</h4>
+                  <p>Updates on the latest BaseSpace releases</p>
                 </div>
               </a>
             </div>
