added Whats new section on homepage

--- a/index.html
+++ b/index.html
@@ -67,20 +67,20 @@ is_homepage: true
         </div>
 
         <div class="col-md-6 popular-articles-section">
-            <h3 class="home-title">Popular Articles</h3>
-                                
+          <h3 class="home-title">What's New?</h3>
             <ul class="nav nav-pills nav-stacked">
-                 <li><a href="/articles/tutorials/share-data-using-email/" class="popular-article-link">How to share data using Email option</a></li>
-                 <li><a href="/articles/tutorials/transfer-ownership/" class="popular-article-link">How to transfer ownership</a></li>
-                 <li><a href="/articles/tutorials/delete-data-and-restore/" class="popular-article-link">How to delete/restore data</a></li>
-                 <li><a href="/articles/tutorials/combine-samples/" class="popular-article-link">How to combine samples</a></li>
-                 <li><a href="/articles/tutorials/switch-existing-account-to-new-credentials/" class="popular-article-link">How to switch existing account to a new username/email</a></li>
-                 <li><a href="/articles/tutorials/purchase-icredits/" class="popular-article-link">How to purchase iCredits</a></li>
-                 <li><a href="/articles/tutorials/download-data-from-run/" class="popular-article-link">How to download Data from a Run</a></li>
-                 <li><a href="/articles/tutorials/cancel-transfer-ownership/" class="popular-article-link">How to cancel the transfer of ownership?</a></li>
-                 <li><a href="/articles/descriptive/biological-samples/" class="popular-article-link">Biological Samples tab</a></li>
-                 <li><a href="/articles/tutorials/plan-runs/" class="popular-article-link">How to plan runs</a></li>
-            </ul>        
+                 <li><a href="#" class="popular-article-link">Latest blog</a></li>
+                 <li><a href="#" class="popular-article-link">Not so latest blog</a></li>
+                 <li><a href="#" class="popular-article-link">Blog post before the latest</a></li>
+            </ul>     
+          <h3 class="home-title">Popular Articles</h3>
+          <ul class="nav nav-pills nav-stacked">
+               <li><a href="/articles/tutorials/share-data-using-email/" class="popular-article-link">How to share data using Email option</a></li>
+               <li><a href="/articles/tutorials/transfer-ownership/" class="popular-article-link">How to transfer ownership</a></li>
+               <li><a href="/articles/tutorials/delete-data-and-restore/" class="popular-article-link">How to delete/restore data</a></li>
+               <li><a href="/articles/tutorials/combine-samples/" class="popular-article-link">How to combine samples</a></li>
+               <li><a href="/articles/tutorials/switch-existing-account-to-new-credentials/" class="popular-article-link">How to switch existing account to a new username/email</a></li>
+          </ul>        
         </div><!-- /column ends -->
     </div><!-- /row ends -->
 </div>
