revert addition of release notes file and accordion section
Since it is already present on another branch

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@ is_homepage: true
             </div>
 
             <div class="col-sm-3">
-              <a target="_blank" href="http://support.illumina.com/content/dam/illumina-support/documents/documentation/software_documentation/basespace/basespace-user-guide-15044182-e.pdf">
+              <a href="#">
                 <div class="bsh-additional-section">
                   <p><span class="icon-file bsh-additional-icon"></span></p>
                   <h4>Release Notes</h4>
