--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ is_homepage: true
             </div>
 
             <div class="col-sm-3">
-              <a href="#">
+              <a target="_blank" href="http://support.illumina.com/content/dam/illumina-support/documents/documentation/software_documentation/basespace/basespace-user-guide-15044182-e.pdf">
                 <div class="bsh-additional-section">
                   <p><span class="icon-file-text bsh-additional-icon"></span></p>
                   <h4>Release Notes</h4>
