--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@ is_homepage: true
             </div>  
             
             <div class="col-sm-3">
-                <a href="#" class="lghtbox thumbnail bsh-thumbnail" data-toggle="modal" data-target="#videoModal" data-theVideo="//www.youtube.com/embed/AzpyafxoWGw"><img src="images/video3.png" class="img-responsive">
+                <a href="#" class="lghtbox thumbnail bsh-thumbnail" data-toggle="modal" data-target="#videoModal" data-theVideo="//www.youtube.com/embed/0xUDAeqKH7U"><img src="images/onsite-screenshot.png" class="img-responsive">
                    <div class="caption">
-                    <p>Push-Button De Novo Assembly in BaseSpace</p>
+                    <p>Introduction to BaseSpace Onsite platform</p>
                     </div>
                 </a>
                               
