made the release notes reflect helpcenter release

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ is_homepage: true
             </div>
 
             <div class="col-sm-3">
-              <a href="/articles/release-notes/basespace/2015/basespace-3.15.2/">
+              <a href="/articles/release-notes/helpcenter/2015/1.0.0">
                 <div class="bsh-additional-section">
                   <p><span class="icon-file-text bsh-additional-icon"></span></p>
                   <h4>Release Notes</h4>
