fix spelling error on homepage

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ is_homepage: true
                 <div class="bsh-additional-section">
                   <p><span class="icon-printer bsh-additional-icon"></span></p>
                   <h4>Print User Guide</h4>
-                  <p>This PDF version include articls, FAQs and policies</p>
+                  <p>This PDF version includes articles, FAQs and policies</p>
                 </div>
               </a>
             </div>
