--- a/_docs/release-notes/index.html
+++ b/_docs/release-notes/index.html
@@ -1,11 +1,11 @@
 ---
 layout: default
 title: "Release Notes"
-section_root: true
+section_root: help-center
 hide_welcome_banner: true
 is_article: false
 ---
-{% include article-breadcrumbs.html %}
+{% include breadcrumbs.html %}
 
 <div class="container">
   <div class="row">
