--- a/_docs/release-notes/index.html
+++ b/_docs/release-notes/index.html
@@ -16,8 +16,9 @@ is_article: false
       <hr/>
         <h2>BaseSpace</h2>
         <ul>
+           <li><a href="/release-notes/basespace/2015/3.16.0/" class="accordion-link">March 30, 2015 - 3.16.0 - MSR conversion</a></li>            
            <li><a href="/release-notes/basespace/2015/3.15.2/" class="accordion-link">March 13, 2015 - 3.15.2 - Minor Fixes</a></li>
-           <li><a href="/release-notes/basespace/2015/3.15.1/" class="accordion-link">March 3, 2015 - 3.15.1 - NeoPrep Support</a></li>            
+           <li><a href="/release-notes/basespace/2015/3.15.1/" class="accordion-link">March 3, 2015 - 3.15.1 - NeoPrep Support</a></li> 
         </ul>
         <h2>HelpCenter</h2>
         <ul>
