helpcenter v1.1 release notes added

--- a/_docs/release-notes/index.html
+++ b/_docs/release-notes/index.html
@@ -30,7 +30,8 @@ is_article: false
         </ul>
         <h2>HelpCenter</h2>
         <ul>
-            <li><a href="/release-notes/helpcenter/2015/1.0.0/" class="accordion-link">1.0.0 - First Release</a></li>
+            <li><a href="/release-notes/helpcenter/2015/1.0/" class="accordion-link">1.0 - First Release</a></li>
+            <li><a href="/release-notes/helpcenter/2015/1.1/" class="accordion-link">1.1 - Additional documentation and minor bug fixes</a></li>
         </ul>
     </div>
   </div>
